--- a/package.json
+++ b/package.json
@@ -79,6 +79,7 @@
     "typescript": "^4.6.3"
   },
   "dependencies": {
+    "@thaddeusjiang/react-sortable-list": "^0.0.3",
     "classnames": "^2.3.1",
     "react-table": "^7.7.0"
   }
